Disable bounds checks in benchmarks
Also when run from CLI and not IDEA