@@ -14,7 +14,7 @@ import static org.openjdk.jmh.annotations.Scope.Benchmark;
 @Warmup(iterations = 5, time = 1000, timeUnit = MILLISECONDS)
 @Measurement(iterations = 5, time = 1000, timeUnit = MILLISECONDS)
 @BenchmarkMode(AverageTime)
-@Fork(1)
+@Fork(value = 1, jvmArgsAppend = {"-Djdk.incubator.vector.VECTOR_ACCESS_OOB_CHECK=0"})
 public class Bench {
     private final Matrix4f m4 = new Matrix4f();
     private final Matrix4fvBB m4vbb = new Matrix4fvBB();
@@ -80,12 +80,6 @@ public class Bench {
         new Runner(new OptionsBuilder()
             .include(Bench.class.getName())
             //.addProfiler(LinuxPerfProfiler.class)
-            .jvmArgsAppend(
-                    "--add-modules=jdk.incubator.vector",
-                    "-Djdk.incubator.vector.VECTOR_ACCESS_OOB_CHECK=0"
-                  //"-XX:+UnlockExperimentalVMOptions",
-                  //"-XX:+UseJVMCICompiler" // <- Graal does not have Panama Vector API support right now
-            )
             .build()
         ).run();
     }
